# ppp-enrichment

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup-and-push.ps1  split-queue.ps1
.github/workflows/: pipeline.yml  scheduled-ppp-chunk.yml  seed-ppp-queue.yml
config/: .env.example
data/output/: clean_leads_2026-06-22_01-29.csv  clean_leads_2026-06-22_01-37.csv  clean_leads_2026-06-23_01-49.csv  clean_leads_2026-06-23_06-35.csv  clean_leads_2026-06-23_12-40.csv  clean_leads_2026-06-23_17-50.csv  clean_leads_2026-06-23_23-06.csv  clean_leads_2026-06-24_06-36.csv  clean_leads_2026-06-24_12-31.csv  clean_leads_2026-06-24_17-30.csv  clean_leads_2026-06-24_22-46.csv  clean_leads_2026-06-25_06-34.csv  clean_leads_2026-06-25_12-23.csv  clean_leads_2026-06-25_17-35.csv  clean_leads_2026-06-25_23-02.csv  clean_leads_2026-06-26_06-42.csv  clean_leads_2026-06-26_12-28.csv  clean_leads_2026-06-26_17-26.csv  clean_leads_2026-06-26_22-49.csv  clean_leads_2026-06-27_06-28.csv  clean_leads_2026-06-27_11-37.csv  clean_leads_2026-06-27_16-44.csv  clean_leads_2026-06-27_22-22.csv  clean_leads_2026-06-28_06-50.csv  clean_leads_2026-06-28_11-53.csv  clean_leads_2026-06-28_16-47.csv  clean_leads_2026-06-28_22-19.csv  clean_leads_2026-06-29_06-56.csv  clean_leads_2026-06-29_14-01.csv  clean_leads_2026-06-29_18-48.csv  clean_leads_2026-06-29_22-59.csv  clean_leads_2026-06-30_06-39.csv  clean_leads_2026-06-30_12-37.csv  clean_leads_2026-06-30_17-19.csv  clean_leads_2026-06-30_22-58.csv  clean_leads_2026-07-01_06-54.csv  (+107 more)
scripts/: ci_process_one_chunk.py  publish_to_github.ps1
(+468 files in other folders)
