[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppp-enrichment"
version = "0.1.0"
description = "PPP/EIDL borrower enrichment scaffolding."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4",
  "httpx",
  "lxml",
  "pandas",
  "python-dotenv",
  "tenacity",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
